# personal-plaid-api

./: LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: config.py  main.py
frontend/public/: index.html
frontend/src/Components/Headers/: index.tsx
